--- a/package.json
+++ b/package.json
@@ -9,20 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^3.2.2",
-    "@emotion/react": "^11.13.5",
-    "@emotion/styled": "^11.13.5",
-    "framer-motion": "^11.13.1",
+    "@chakra-ui/react": "^3.2.3",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "framer-motion": "^10.12.16",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.3",
-    "next": "15.0.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "next": "^13.5.2",
+    "next-themes": "^0.4.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.3.13",
     "@types/react-dom": "^18",
-    "typescript": "^5"
+    "typescript": "^5.7.2"
   }
 }
